--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,9 @@ dependencies {
     //相机库
     implementation 'com.jph.takephoto:takephoto_library:4.0.3'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    compile 'com.google.android:flexbox:0.3.1'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
