--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,10 @@ dependencies {
     implementation 'com.jph.takephoto:takephoto_library:4.0.3'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
+    //流式布局
     compile 'com.google.android:flexbox:0.3.1'
+    //时间选择器
+    compile 'com.contrarywind:Android-PickerView:3.2.7'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
