--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     //时间选择器
     compile 'com.contrarywind:Android-PickerView:3.2.7'
 
+    //banner 首页轮播图
+    implementation 'com.youth.banner:banner:1.4.10'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
