--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,21 +12,24 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         >
-            <activity
-                android:name=".MainActivity"
-                android:screenOrientation="portrait"
-                android:windowSoftInputMode="stateHidden|adjustResize"
-                >
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden|adjustResize"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activity.HetongActivity"
-                  android:screenOrientation="portrait"
-                  android:windowSoftInputMode="stateHidden|adjustResize"
+        <activity
+            android:name=".ui.activity.HetongActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden|adjustResize"
             />
+        <activity android:name=".activity.CommonAreaActivity">
+        </activity>
     </application>
 
 </manifest>
