--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
             />
         <activity android:name=".activity.CommonAreaActivity"
                   android:screenOrientation="portrait"
-                  android:windowSoftInputMode="stateHidden|adjustResize"
+                  android:windowSoftInputMode="adjustPan"
             >
         </activity>
         <activity android:name=".ui.activity.CommonFacilityActivity"
@@ -38,6 +38,7 @@
                   android:windowSoftInputMode="stateHidden|adjustPan"
             >
         </activity>
+        <activity android:name=".ui.activity.PhotoActivity"/>
     </application>
 
 </manifest>
